# boids

./: .gitattributes  Cargo.toml  README.md  justfile
engine/: Cargo.toml
engine/src/: lib.rs  renderer.rs  transform.rs
launchers/native/: Cargo.toml  justfile
launchers/native/src/: main.rs
launchers/wasm/: Cargo.toml  index.html  justfile
launchers/wasm/src/: main.rs
src/: lib.rs
