[package]
name = "boids-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[workspace]
members = ["engine", "launchers/native", "launchers/wasm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.5"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
    "aarch64-apple-darwin",
]

[profile.release-with-debug]
inherits = "release"
debug = true

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"


[dependencies]
anyhow = "1.0.75"
fastrand = "2.0.0"
tracing = { version = "0.1.37", features = ["release_max_level_info"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
engine = { path = "engine" }

[target.'cfg(target_family = "wasm")'.dependencies]
engine = { path = "engine", default-features = false, features = ["wasm"] }
