[package]
name = "boids-wasm"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[package.metadata.dist]
dist = false

[profile.release]
opt-level = "s"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
boids-core = { path = "../.." }
tracing-wasm = "0.2.1"
wasm-bindgen-futures = "0.4.37"
instant = { version = "0.1.12", features = ["wasm-bindgen"] }
